Overlapping icon on login and sign-up page fixed

--- a/assets/css/login.css
+++ b/assets/css/login.css
@@ -221,6 +221,23 @@ label {
   transition: 0.5s ease-in-out;
 }
 
+input[type="password"]::-webkit-textfield-decoration-container {
+  display: none;
+}
+
+input[type="password"]::-moz-textfield-decoration-container {
+  display: none;
+}
+
+input[type="password"]::-ms-clear {
+  display: none;
+}
+
+input[type="password"]::-ms-reveal {
+  display: none;
+}
+
+
 .input {
   width: 100%;
   height: 40px;
